# TmpShare

./: .gitignore  CLICKHOUSE_HOME.html  Makefile  README.md  TECH_DOC.md  app.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
deploy/: deploy.sh  secure-drop.env.example  secure-drop.service
docs/: USER_MANUAL.md
src/tmpshare/: __init__.py  app.py  config.py  repository.py  routes.py  service.py
tests/: test_app.py
