[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmpshare"
version = "0.1.0"
description = "Temporary secure file sharing service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "flask==3.0.3",
  "gunicorn==22.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "ruff==0.6.5",
  "black==24.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
